log
Fri Apr 17 12:13:07 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
6560ebd
Fri Apr 17 02:04:39 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:37: error: too few arguments to function ‘calloc’
   48 |     HashMap *nuevoMapa = (HashMap*) calloc(sizeof(HashMap));
      |                                     ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
50fd0f6
Fri Apr 17 02:05:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
74d835e
Fri Apr 17 02:14:33 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
hashmap.c:54:9: error: ‘i’ undeclared (first use in this function)
   54 |     for(i = 0; i < capacity ;i++){
      |         ^
4be6b8b
Fri Apr 17 02:14:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
fa72c43
Fri Apr 17 02:16:12 PM UTC 2026: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  1|6
total_score: 5/60
264db37
Fri Apr 17 02:29:06 PM UTC 2026: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:25: error: array subscript is not an integer
   77 |         if (map->buckets[index]->key == NULL) {
      |                         ^
hashmap.c:81:29: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
   81 |         index = (index + 1) % map->capacity;
      |                 ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
      |                        |         |
      |                        |         long int
      |                        char * (*)(const char *, int)
hashmap.c:84:22: error: ‘startIndex’ undeclared (first use in this function)
   84 |         if (index == startIndex) {
      |                      ^~~~~~~~~~
hashmap.c:84:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:90:17: error: array subscript is not an integer
   90 |     map->buckets[index] = createPair(key, value);
      |                 ^
hashmap.c:93:18: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Wint-conversion]
   93 |     map->current = index;
      |                  ^
hashmap.c:71:10: error: unused variable ‘indiceInicial’ [-Werror=unused-variable]
   71 |     long indiceInicial = indice;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
ca791d2
Fri Apr 17 02:52:51 PM UTC 2026: 
 hashmap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 20/60
031c4f5
Fri Apr 17 03:02:23 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 30/60
e11bc18
